--- a/Views/Linealytics/CreateCausaParo.cshtml
+++ b/Views/Linealytics/CreateCausaParo.cshtml
@@ -12,7 +12,7 @@
             </h4>
         </div>
         <div class="card-body">
-            <form asp-action="CreateCausaParo" method="post">
+            <form asp-controller="Linealytics" asp-action="CreateCausaParo" method="post">
                 <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
 
                 <div class="row">
