--- a/Views/Linealytics/EditCausaParo.cshtml
+++ b/Views/Linealytics/EditCausaParo.cshtml
@@ -12,7 +12,7 @@
             </h4>
         </div>
         <div class="card-body">
-            <form asp-action="EditCausaParo" method="post">
+            <form asp-controller="Linealytics" asp-action="EditCausaParo" method="post">
                 <div asp-validation-summary="ModelOnly" class="alert alert-danger"></div>
                 <input type="hidden" asp-for="Id" />
 
